<resources>
    <string name="app_name">Login SmartWord Demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="username">User Name</string>
    <string name="register">Register</string>
    <string name="haveanaccount">Have an account?</string>
    <string name="emailinvalid">Email invalid</string>
    <string name="passwordatleast8characters">Password at least 8 characters</string>
    <string name="pleasefilloutthisform">please fill out the form</string>
    <string name="wrongemailorpassword">Wrong email or password</string>
    <string name="signout">Sign Out</string>
    <string name="fullname">Full name</string>
    <string name="phone">Phone</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="message_error_confirm_password">The specified passwords do not match</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="registernow">Register now</string>
    <string name="uploadprofilephoto">Upload profile photo</string>
    <string name="loginnow">Login now</string>
    <string name="next">Next</string>
    <string name="listproduct">List product</string>
    <string name="map">Map</string>
    <string name="permission_rationale">premisionnnn</string>
    <string name="permission_denied_explanation">denied</string>
    <string name="settings">settigns</string>
    <string name="editprofile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="updating">Đang cập nhật thông tin...</string>
    <string name="plesefillinyourfullname">Please fill in your full name</string>
    <string name="registersusscess">Account has been created</string>
    <string name="updating1">Updating...</string>
    <string name="loading">Loading...</string>
    <string name="successs">Success</string>
    <string name="comfirmaddress">Confirm Address</string>
    <string name="book">Book</string>
    <string name="call">Call</string>
    <string name="information">Information</string>
    <string name="call_driver">Call Driver</string>
    <string name="image">Image</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="cash">Cash</string>
    <string name="Momo">Momo</string>
    <string name="banking">Banking</string>
    <string name="confirmbooking">Confirm Booking</string>
    <string name="confirm">Confirm</string>
    <string name="setimageconfirm">Set Image for confirm</string>
    <string name="price_formated">đ/h</string>
    <string name="warning">Warning</string>
    <string name="yourbookingwillbecancel">Your booking will be cancel</string>
    <string name="OK">OK</string>
    <string name="view_on_map">View on map</string>
    <string name="owner">Owner</string>
    <string name="click_here_to_get_navigation_to_the_hotel">Click here to get navigation to the Bike</string>
    <string name="payment">Payment</string>
    <string name="Cancel">Cancel</string>
    <string name="showonmap">Show on map</string>
    <string name="thankyou">Thank you!!!</string>
    <string name="your_feedback_was_submited">Your feedback was submited</string>
    <string name="rateyour">Rate your last rent with</string>
    <string name="listbike">List Bike</string>
    <string name="xedi">Xedi</string>
    <string name="msg_token_fmt">Get Token</string>
</resources>
