<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="300dp"
              android:layout_height="200dp"
              android:background="@color/white">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:orientation="vertical">
        <View
                android:layout_marginLeft="19.2dp"
                android:layout_marginRight="19.2dp"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="#33979797"
                android:layout_marginBottom="20dp"/>

        <TextView
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textColor="@color/black"
                android:textStyle="bold"/>



        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:textSize="16sp"
                    android:layout_marginTop="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourbookingwillbecancel"/>
            <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button

                        android:layout_weight="1"
                        android:id="@+id/btn_cancel_back_booking"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:text="@string/Cancel"
                        android:textColor="@color/white"
                        android:background="@color/red"
                />
                <Button
                        android:layout_weight="1"
                        android:id="@+id/btn_back_booking"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:text="@string/OK"
                        android:textColor="@color/white"
                        android:background="@drawable/gradient_button"
                />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>