<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SignUpFragment"
            android:orientation="vertical"
            android:background="@color/white">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_signup1">


            <FrameLayout
                        android:id="@+id/frameAvatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true">
                <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/img_avatar"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:src="@drawable/img_choose"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        app:civ_border_color="#FF000000"/>

                <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_camera2"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:layout_marginLeft="50dp"
                />


            </FrameLayout>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploadprofilephoto"
            android:layout_below="@+id/frameAvatar"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            />
        </RelativeLayout>

        <RelativeLayout
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_fullname_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:theme="@style/LoginTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_fullname_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fullname"
                        android:lines="1"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_fullname_layout"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/LoginTextInputLayoutStyle"
                    android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="text"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_phone_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_email_layout"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/LoginTextInputLayoutStyle"
                    android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_phone_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_phone_layout"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/LoginTextInputLayoutStyle"
                    android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_confirmpassword_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_password_layout"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/LoginTextInputLayoutStyle"
                    android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirmpassword_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirmpassword"
                        android:inputType="textPassword"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btn_register"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_gradient_button"
                    android:text="@string/register"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:layout_below="@id/input_confirmpassword_layout"
                    android:layout_marginTop="30dp"

            />

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btn_register"
                    android:gravity="center">
                <TextView
                        android:layout_gravity="center"
                        android:id="@+id/already"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/haveanaccount"
                        android:layout_above="@+id/TextViewCreateAccount"
                        android:gravity="center"
                        android:lines="1"
                />

                <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:selectableItemBackground"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="center"
                        android:id="@+id/btn_login_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loginnow"
                        android:gravity="center"
                        android:lines="1"
                        android:textColor="@color/bg_signin"
                />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>