<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fillViewport="true">
    <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SignUpFragment"
            android:orientation="vertical"
            android:background="@color/white"
            android:weightSum="9"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/bg_login4">

            <ImageView
                    android:layout_marginBottom="20dp"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/app_logo"
                    android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:backgroundTint="@color/white"
                android:background="@drawable/layout_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:paddingStart="10dp"
                android:paddingEnd="10dp">

            <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Welcome"
                    android:textSize="22sp"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
            />

            <!--<TextView-->
                    <!--android:id="@+id/tv_login_to_continue"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@+id/tv_welcome"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:text="Login to continue"-->

            <!--/>-->

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_welcome"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:theme="@style/LoginTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:lines="1"
                        android:inputType="text"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_email_layout"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/LoginTextInputLayoutStyle"
                    android:layout_marginTop="20dp"
                    app:passwordToggleEnabled="true"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_password_layout"
                    android:text="@string/forgotpassword"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/bg_signin"
                    android:visibility="gone"
            />
            <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_gradient_button"
                    android:text="@string/login"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:layout_below="@id/tv_forgot_password"
                    android:layout_marginTop="30dp"
            />

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btn_Login"
                    android:gravity="center">
                <TextView
                        android:layout_gravity="center"
                        android:id="@+id/already"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donthaveaccount"
                        android:gravity="center"
                        android:lines="1"
                />

                <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:selectableItemBackground"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:id="@+id/tv_register_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registernow"
                        android:gravity="center"
                        android:lines="1"
                        android:padding="5dp"
                        android:textColor="@color/bg_signin"
                />
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>
</ScrollView>