<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="300dp"
              android:layout_height="450dp"
              android:background="@color/white">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff">
        <ImageView
                android:id="@+id/iv_bike_confirm"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@drawable/xedien"
                android:scaleType="centerCrop"
                android:contentDescription="@string/setimageconfirm"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:baselineAligned="false">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <ImageView
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_brand"/>
                <TextView
                        android:id="@+id/tv_brand_confirm"
                        android:textSize="12.5sp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brand"
                        android:layout_marginTop="3dp"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <ImageView
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_price"
                />
                <TextView
                        android:id="@+id/tv_price_confirm"
                        android:textSize="12.5sp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:layout_marginTop="3dp"
                />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:orientation="vertical">
        <View
                android:layout_marginLeft="19.2dp"
                android:layout_marginRight="19.2dp"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="#33979797"
                android:layout_marginBottom="20dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Payment"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/img_cash_confirm"
                        android:layout_marginStart="15dp"
                        android:layout_centerVertical="true"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_cash"/>
                <TextView
                        android:id="@+id/tv_cash_confirm"
                        android:textSize="13.5sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="50dp"
                />

                <ImageView
                        android:layout_marginRight="10dp"
                        android:id="@+id/img_rightmark_cash"
                        android:layout_width="20dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_right"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/img_momo_confirm"
                        android:layout_marginStart="15dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/logo_momo" android:layout_marginTop="7dp"
                        android:layout_alignParentTop="true"/>

                <TextView
                        android:id="@+id/tv_momo_confirm"
                        android:textSize="12.5sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Momo"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="50dp"
                        android:layout_marginBottom="11dp"/>

                <ImageView
                        android:layout_marginRight="10dp"
                        android:id="@+id/img_rightmark_momo"
                        android:layout_width="20dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_round"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/img_banking_confirm"
                        android:layout_marginStart="15dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_banking" android:layout_marginTop="7dp"
                        android:layout_alignParentTop="true"/>

                <TextView
                        android:id="@+id/tv_banking_confirm"
                        android:textSize="12.5sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/banking"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="50dp"
                />

                <ImageView
                        android:layout_marginRight="10dp"
                        android:id="@+id/img_rightmark_banking"
                        android:layout_width="20dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_round"/>

            </RelativeLayout>
        </LinearLayout>

        <Button
                android:id="@+id/btn_confirm_booking"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:background="@drawable/gradient_button"
                />

    </LinearLayout>


</LinearLayout>